--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
