--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "lucide-vue-next": "^0.532.0",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0",
     "vue": "^3.5.18"
